--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,5 @@
     "python.testing.pytestEnabled": false,
     "python.testing.unittestEnabled": false,
     "python.testing.nosetestsEnabled": false,
-    "python.pythonPath": "/home/daniel/Development/github.com/cleanunicorn/hitomi/venv/bin/python3.8"
+    "python.pythonPath": "venv/bin/python"
 }
